# bdgaskins27889-eviction-early-warning

./: .gitignore  CITATION.cff  How to Run.md  LICENSE  MODEL CARD  README  README.md  prproject.toml  pyproject.toml  requirements.txt
.github/workflows/: monthly-pipeline.yml  python-ci.yml  readme.md
configs/: config.yaml
data/: README.md  discussion.md  results.md
docs/: DATA_DOWNLOAD.md  DATA_SOURCES.md  METHODOLOGY.md  METHODS.md  MODEL_CARD.md  PRIVACY.md  REPRODUCIBILITY.md
notebooks/: 01_pitt_county_eviction_early_warning.ipynb  02_bay_county_disaster_segmentation.ipynb  README.md
reports/white_paper/: summary.md
src/: run_pipeline.py
src/eviction_early_warning/: __init__.py  data_loader.py  feature_engineering.py  features.py  io.py  pipeline.py  scoring.py  segmentation.py
src/eviction_early_warnings/: segmentation.py
src/scripts/: run_monthly.py
tests/: test_imports.py  test_smoke.py
